Expand add-on interactivity
Implement add-on trigger and arrow/enter selection for full keyboard nav

Add case insensitive and url filtering

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,15 @@
       "48": "icons/border-48.png"
     },
   
+    "commands": {
+        "_execute_browser_action": {
+            "suggested_key": {
+                "default": "Alt+Shift+T"
+            },
+            "description": "Open Tab Search"
+        }
+    },
+
     "browser_action": {
         "default_title": "All Your Tabs",
         "default_popup": "html/tab_list.html"
